# ff14_macro_agent

./: .env  Dockerfile  README.md  main.py  package-lock.json  prompt.md  pyproject.toml  run.py
app/: config.py  main.py  requirements.txt  settings.py
app/api/routers/: chat.py
app/engine/: engine.py
app/engine/tools/: __init__.py  mcp.py  weather.py
app/services/: llm.py
config/: tools.yaml
data/: [cn]宏学(第四版).md  基本语法.md  宏列表.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: macroApi.js
frontend/src/components/: MacroGenerator.jsx
